formatted styles added (I forgot to add a branch for this lesson at the beginning)

--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,8 @@
 /* Load Roboto font from Google Fonts */
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');
 
+/* I forgot to create a new branch when working on this lesson */
+
 /* Change background color of page body */
 body {
     background: rgba(194, 238, 193, 0.13);
